# referral_system

./: .env.template  .gitignore  Dockerfile  codeRunner.conf  coverage.report.txt  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt
core/: decorators.py  serializers.py  tests.py  urls.py  views.py
custom_auth/: admin.py  forms.py  models.py
custom_auth/migrations/: 0001_initial.py
referral_system/: asgi.py  urls.py  wsgi.py
referral_system/settings/: common.py  local.py  prod.py
